TeleHealth — consolidated all CSS files into one called: responsive.css, fix alignment issues on waiting room page

--- a/TeleHealth_files/responsive.css
+++ b/TeleHealth_files/responsive.css
@@ -59,7 +59,7 @@
         
     }
     .Index_container {
-      height: 1100px;
+      height: 850px;
       width: inherit;
       padding-bottom: 0px;
     }   
@@ -70,10 +70,11 @@
         position: relative;
         background-color: #fff;
         width: 90%;
-        height: 965px;
+        height: 745px;
         margin: 10px 0px 0px 0px;
         padding: 0px 0px 0px 0px;
-    }       .Banner_bannerWhiteContainer#whiteContainerConsent2 {
+    }       
+    .Banner_bannerWhiteContainer#whiteContainerConsent2 {
         height: 1175px;
         
     }
@@ -95,21 +96,31 @@
         text-align: left;
         padding: 40px 7px 0px 10px;
         font-family: Roboto Light;
-        font-size: 20px;
-        
+        font-size: 20px;     
+    }
+  /* Controls Label on top of inputbox position */
+    .messageHeadLabel > div {
+      width: 360px;
+      position: absolute;
+      top: 0%;
+      padding-top: 0px;
+      text-align: left;
+      color: #4F4F4F;
+      font-family: Roboto;
+      font-size: 16px;
     }
     .dateDiv {
+      position: absolute;
+      top: 33%;
       width: 80%; 
       align-content: flex-start;
-      text-align: left;
-      padding-top: 35px;
-        
+      text-align: left;      
     }
-    .dateDiv > label {
+/*    .dateDiv > label {
       width: 100%;
       text-align: left;
       padding-bottom: 10px;
-    }    
+    }    */
     .txtDob {
         /*background: url(./calendar.svg) no-repeat scroll right;*/
         padding-right: 8px;
@@ -203,7 +214,7 @@
     }
     .getStartedtxt > p {
         text-align: left;
-        padding: 48px 0px 0px 0px;
+        padding: 60px 0px 0px 0px;
         font-family: Roboto, bold;
         font-size: 20px;
     }
@@ -279,32 +290,11 @@
     /* controls inputbox position */
     #inputConsent2 {
       width: 100%;
+      text-align: center;
       position: absolute;
-      top: 35%;
-      right: 16.5%
-    }
-    .messageHeadLabel {
-      
-      width: 360px;
-      position: absolute;
-      top: 18%;
-      padding-top: 0px;
-      text-align: left;
-      color: #4F4F4F;
-      font-family: Roboto;
-      font-size: 16px;
-    
-    }
-    /* Controls Label on top of inputbox position */
-    #hdlabelConsent2 {
-      position: absolute;
-      top: 15%;
-      left: 33.6%;
-      color: 4F4F4F;
-      padding: 0px 0px 10px 0px;
-      text-align: left;
-      width: 360px;
-      
+      bottom: 55%;
+      display: flex;
+      justify-content: center;
     }
     #txtPatientInput {
       position: absolute;
@@ -348,7 +338,7 @@
   }
   .chatBar {
     position: absolute;
-    bottom: 300px;
+    bottom: 230px;
     font-family: Roboto Medium;
     font-size: 16px;
     color: #fff;
@@ -363,7 +353,7 @@
     bottom: 0;
     background-color: #fff;
     width: 90%;
-    height: 25%;
+    height: 250px;
     margin-left: 5%;
     margin-right: 5%;  
   }
@@ -392,10 +382,10 @@
   }
   .consentBtn {
     position: absolute;
-    top: 80%;
+    top: 60%;
     padding-left: 2%; 
     padding-right: 2%; 
-    padding-top: 35px; 
+    padding-top: 5px; 
     padding-bottom: 5px; 
     width: 100%; 
     display: flex; 
@@ -470,7 +460,7 @@
       font-size: 20px;
   }
   .counterLBL {
-    margin-top: 13%;
+    margin-top: 7%;
     font-family: Roboto light;
     font-size: 20px;
   }
@@ -486,13 +476,16 @@
     font-size: 20px; 
     padding-top: 10;
   }
-  .bntCall {
+  .btnCall {
+    position: absolute;
+    left: 0;
     padding-left: 2%; 
     padding-right: 2%; 
     padding-top: 5px; 
     padding-bottom: 5px; 
     width: 100%;
     height: 60px;
+    bottom: 280px;
     display: flex; 
     justify-content: center;
   }
@@ -520,6 +513,8 @@
   }
 }
 /*    ////////////////    */
+
+
 
 
 /*////////   iPhone 6/7/8 plus    ///////////*/
@@ -993,7 +988,7 @@
     font-size: 16px; 
     padding-top: 0;
   }
-  .bntCall {
+  .btnCall {
     padding-left: 2%; 
     padding-right: 2%; 
     padding-top: 5px; 
@@ -1027,7 +1022,7 @@
 /*    ////////////////    */
 
 
-/* //////// Tablet Resolution //////// */
+/* /////////////// Tablet Resolution ///////////////////// */
 
 @media screen and (max-width: 768px) and (min-width: 601px) {
   
